// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util/purl parse() parses namespaced npm 1`] = `
Object {
  "datasource": "npm",
  "lookupName": "@foo/bar",
  "qualifiers": Object {},
}
`;

exports[`util/purl parse() parses namespaced npm with version 1`] = `
Object {
  "datasource": "npm",
  "lookupName": "@foo/bar",
  "qualifiers": Object {},
}
`;

exports[`util/purl parse() parses npm with version and 1 qualifier 1`] = `
Object {
  "datasource": "npm",
  "lookupName": "foo",
  "qualifiers": Object {
    "a": "b",
  },
}
`;

exports[`util/purl parse() parses npm with version and 2 qualifiers 1`] = `
Object {
  "datasource": "npm",
  "lookupName": "foo",
  "qualifiers": Object {
    "a": "b",
    "c": "d",
  },
}
`;

exports[`util/purl parse() parses npm with version and 2 qualifiers and subpath 1`] = `
Object {
  "datasource": "npm",
  "lookupName": "foo",
  "qualifiers": Object {
    "a": "b",
    "c": "d",
  },
  "subpath": "stop",
}
`;

exports[`util/purl parse() parses simple npm 1`] = `
Object {
  "datasource": "npm",
  "lookupName": "foo",
  "qualifiers": Object {},
}
`;
